Spacing fix

--- a/src/Card7/Card7.module.css
+++ b/src/Card7/Card7.module.css
@@ -30,6 +30,6 @@
 }
 
 .champtower {
-  width: 400px;
+  width: 300px;
   margin-top: 50px;
 }
